--- a/app/views/home/template1.html.erb
+++ b/app/views/home/template1.html.erb
@@ -1,8 +1,16 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp">
+    <i class="material-icons">mail</i>
+  </a>
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-    <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div>
-          <span class="site-description">Shall we go?</span></span></div>
+    <div class="mdl-layout__header-row site-logo-row">
+      <span class="mdl-layout__title">
+            <div class="site-logo">
+              <%= image_tag('site-logo.png') %>
+            </div>
+          <span class="site-description">Shall we go?</span>
+      </span>
+    </div>
     <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
       <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
         <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
@@ -289,6 +297,19 @@
   }
   .slider .slides {
     background-color: #ffffff;
+  }
+  .slider {
+    margin: 0 auto;
+  }
+  .slider .indicators {
+    bottom: 40px;
+    z-index: 100;
+  }
+  .mdl-card {
+    height: 400px;
+  }
+  .headera{
+
   }
 </style>
 
