--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,13 @@
     -ms-flex: 1;
     flex: 1;
     line-height: 100%;
+  }
+  .mdl-layout__header--waterfall {
+    background-color: midnightblue;
+  }
+  nav {
     color: #fff;
+    background-color: rgba(255, 255, 255, 0);
   }
   .site-description {
     display: block;
@@ -46,10 +52,5 @@
     text-align: center;
     font-weight: 400;
     margin-bottom: 10px;
-  }
-  .site-content {
-    margin: 1em auto;
-    min-height: 580px;
-    /*background-image: url(https://i.ytimg.com/vi/2C-rNiw3Xao/maxresdefault.jpg);*/
   }
 </style>
