--- a/app/views/home/template1.html.erb
+++ b/app/views/home/template1.html.erb
@@ -1,4 +1,11 @@
-
+<style>
+  .mdl-layout__header{
+    background-color: white;
+  }
+    .mdl-layout__header-row{
+      background-color: white;
+    }
+</style>
 
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp blue lighten-2">
